[gd_scene load_steps=5 format=2]

[ext_resource path="res://Ressources/Ennemis/EnnemisLaser/Enemy_Missile.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Missile.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.4557
height = 33.7339

[sub_resource type="CircleShape2D" id=2]
radius = 177.181

[node name="Missile" type="KinematicBody2D" groups=[
"missile",
]]
script = ExtResource( 2 )

[node name="MissileImage" type="Sprite" parent="."]
rotation = 1.57543
scale = Vector2( 0.690884, 0.690884 )
texture = ExtResource( 1 )

[node name="MissileCollision" type="CollisionShape2D" parent="."]
rotation = 1.56753
scale = Vector2( 0.680393, -0.679338 )
shape = SubResource( 1 )

[node name="MissileVisible" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 2, 0.85551 )

[node name="MissileDetection" type="Area2D" parent="."]
scale = Vector2( 1.28, 1.28 )

[node name="MissileDetectionCercle" type="CollisionShape2D" parent="MissileDetection"]
shape = SubResource( 2 )
[connection signal="screen_exited" from="MissileVisible" to="." method="_on_MissileVisible_screen_exited"]
[connection signal="body_entered" from="MissileDetection" to="." method="_on_MissileDetection_body_entered"]
[connection signal="body_exited" from="MissileDetection" to="." method="_on_MissileDetection_body_exited"]
